tests/golden/errors/type_after_fn.stderr
error[formatting]: canonical order places type declarations before functions; move `user` up
  --> type_after_fn.kso:3:6
   3 | type user
            ^
